# zeromqtest

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt  Generator.hpp  LinerPositionGenerator.hpp  ProtoSerializer.hpp  ZeroMQTransmiter.hpp  client.hpp  main.cpp
common/: message.pb.cc  message.pb.h
rpc/: generate.sh  message.proto
server/: CMakeLists.txt  main.cpp
